Fix: Dashboard table overflow
Recent downloads with long names dit not fit in the table. If the name
did not contain any space-characters there occured no word-wrap and the
table grew out of its container. This fix makes sure the table always
fits the container.

--- a/interfaces/default/css/base.css
+++ b/interfaces/default/css/base.css
@@ -27,6 +27,20 @@ html, body {
         padding-top: 60px;
     }
 }
+
+/*
+ * Prevent overflow on dashboard tables
+ */
+.dashboard .span4 td{
+    overflow:hidden;
+}
+.dashboard .span4 table{
+    table-layout: fixed;
+}
+.dashboard .span4 #downloads_table_body td:last-child {
+    width: 14px;
+}
+
 .carousel-caption {
     cursor: pointer;
 }
